--- a/tools/counter.html
+++ b/tools/counter.html
@@ -1,21 +1,83 @@
 <html>
 <head>
+	<style>
+	.button {
+	  display: inline-block;
+	  padding: 15px 25px;
+	  font-size: 24px;
+	  cursor: pointer;
+	  text-align: center;
+	  text-decoration: none;
+	  outline: none;
+	  color: #fff;
+	  background-color: #4CAF50;
+	  border: none;
+	  border-radius: 15px;
+	}
 
+	.button:hover {background-color: #3e8e41}
+
+	.button:active {
+	  background-color: #1EFF27;
+	}
+	
+	#button-left{ width:100%; height:50%; float:left; font-size:5vw; }
+	#button-right{ width:100%; height:50%; float:left; font-size:5vw; }
+
+	</style>
 </head>
 <body>
-  <div id="counter1" style="width:100%">
-    <button id="">
-  </div>
+	<div style="width:100%; height:40%; background-color: #5BFFE1;">
+		<div style="width:20%; height:100%; float:left;">
+		<input id="button-left" class="button" type="button" onclick="setNum(0, 1);" value="+1" />
+		<input id="button-left" class="button" type="button" onclick="setNum(0, 10);" value="+10" />
+		</div>
+		
+		<div style="width:60%; height:100%; float:left; background-color: #DBDBDB;">
+			<svg width="100%" height="100%">
+				<text id="num0" x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" style="font: 20vw sans-serif">100</text>    
+			</svg>
+		</div>
+		
+		<div style="width:20%; height:100%; float:right;">
+		<input id="button-right" class="button" type="button" onclick="setNum(0, -1);" value="-1" />
+		<input id="button-right" class="button" type="button" onclick="setNum(0, -10);" value="-10" />
+		</div>
+	</div>
+	
+	<div style="width:100%; height:40%; background-color: #5BFFE1;">
+		<div style="width:20%; height:100%; float:left;">
+		<input id="button-left" class="button" type="button" onclick="setNum(1, 1);" value="+1" />
+		<input id="button-left" class="button" type="button" onclick="setNum(1, 10);" value="+10" />
+		</div>
+		
+		<div style="width:60%; height:100%; float:left; background-color: #DBDBDB;">
+			<svg width="100%" height="100%">
+				<text id="num1" x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" style="font: 20vw sans-serif">100</text>    
+			</svg>
+		</div>
+		
+		<div style="width:20%; height:100%; float:right;">
+		<input id="button-right" class="button" type="button" onclick="setNum(1, -1);" value="-1" />
+		<input id="button-right" class="button" type="button" onclick="setNum(1, -10);" value="-10" />
+		</div>
+	</div>
+	
+	
+	
 
 
+	<script>
+		var nums = [10, 10];
+		setNum(0, 10);
+		setNum(1, 10);
+		
+		function setNum(id, add){
+			nums[id] += add;
+			document.getElementById("num" + id).innerHTML = nums[id];
+		}
 
-
-
-
-
-
-
-
+	</script>
 
 
 
