--- a/tools/counter.html
+++ b/tools/counter.html
@@ -33,11 +33,11 @@
 	}
 	
 	@media screen and (orientation: portrait) {
-		/*針對縱向 css去撰寫*/
+		/*針對縱向 css去撰寫 */
 		.counter { width:100%; height:40%; }
 	}
 	@media screen and (orientation: landscape) {
-		/*針對橫向 css*去撰寫/
+		/*針對橫向 css去撰寫 */
 		.counter { width:50%; height:40%; }
 	}
 	
